added cascade to order and fixed order for user problem